# slot-machine

./: main.py  pyproject.toml
backend/: Dockerfile  README.md  main.py  pyproject.toml
frontend/: bun.lockb  electron-builder.json5  index.html  package.json  report.html  tailwind.config.js  vite.config.ts
frontend/electron/main/: config.ts  index.ts  networking.ts  printing.ts  quote.ts
frontend/electron/preload/: index.ts
frontend/src/: App.tsx  index.css
frontend/src/atoms/: audioAtoms.ts  index.ts  settingsAtoms.ts
frontend/src/components/Settings/: SettingsForm.tsx
frontend/src/components/SlotMachine/: Reel.tsx  SlotMachine.tsx  index.tsx
frontend/src/components/ui/: switch.tsx  toast.tsx
